--- a/index.html
+++ b/index.html
@@ -17,8 +17,21 @@
       <nav class="navbar">
 
         <!--LOGO Containter-->
-        <div class = "logo">Mikayle Collins Portfolio</div>
+        <div class="container">
 
+        <div>
+        <img
+        src="images/favicon.png"
+        alt="M/C Logo"
+        style="width: 30px; height: 30px"
+        class = "logophoto"/>
+        </div>
+        </div>
+
+        <div class="logotext" >
+          <h3>Mikayle Collins Portfolio</h3>
+          </div>
+          
         <!--Navigation menu container-->
        <ul class="nav-links">
 
@@ -27,6 +40,7 @@
           <label for="checkbox_clicker" class="hamburger">&#9776</label>
 
           <!--Navigation Options-->
+          
           <div class="menu">
             <li><a href="index.html" class="navOptions"> Home</a></li>
             <li><a href="html/my_resume.html" class="navOptions"> Resume </a></li>
